<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingActivity"
    android:background="@color/bgPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_layout_white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingTop="30dp"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:id="@+id/llsetting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:id="@+id/img_setting"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:lottie_fileName="setting.json"
                    app:lottie_loop="true"
                    app:lottie_scale="200"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/firasansregular"
                    android:text="@string/setting"
                    android:textStyle="bold"
                    android:textColor="@color/blackPrimary"
                    android:textSize="30sp"
                    android:layout_gravity="center"/>

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_lang"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:fontFamily="@font/firasansregular"
                    android:text="@string/language"
                    android:textColor="@color/bluePrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <View
                    android:id="@+id/garis"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#EDEDED"
                    app:layout_constraintTop_toBottomOf="@id/tv_lang">
                </View>

                <LinearLayout
                    app:layout_constraintTop_toTopOf="@id/garis"
                    android:id="@+id/btn_changelanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:padding="5dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/icons_language"
                        android:contentDescription="@string/setting" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/firasansregular"
                            android:text="@string/language"
                            android:textColor="@color/blackPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/firasanslight"
                            android:text="@string/change_language_settings"
                            android:textColor="@color/greyPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_notif"
                    app:layout_constraintTop_toBottomOf="@id/btn_changelanguage"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:fontFamily="@font/firasansregular"
                    android:text="@string/notifications"
                    android:textColor="@color/bluePrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <View
                    android:id="@+id/garis1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#EDEDED"
                    app:layout_constraintTop_toBottomOf="@id/tv_notif">
                </View>

                <LinearLayout
                    app:layout_constraintTop_toBottomOf="@id/garis1"
                    android:id="@+id/btn_daily"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:padding="5dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_notifications"
                        android:contentDescription="@string/setting" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/firasansregular"
                            android:text="@string/dailyreminder"
                            android:textColor="@color/blackPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/firasanslight"
                            android:text="@string/dailyreminder2"
                            android:textColor="@color/greyPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    app:layout_constraintTop_toBottomOf="@id/garis1"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:id="@+id/sc_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    app:track="@drawable/switchtrack"
                    android:thumb="@drawable/switch_tumb"/>


                <LinearLayout
                    android:id="@+id/btn_releasereminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:padding="5dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintTop_toBottomOf="@id/btn_daily"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_notifications"
                        android:contentDescription="@string/setting" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/firasansregular"
                            android:text="@string/releasereminder"
                            android:textColor="@color/blackPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/firasanslight"
                            android:text="@string/releasereminder2"
                            android:textColor="@color/greyPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sc_relese"
                    app:layout_constraintTop_toBottomOf="@id/btn_daily"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    app:track="@drawable/switchtrack"
                    android:thumb="@drawable/switch_tumb"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/btn_releasereminder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icons_about"
                        android:contentDescription="@string/setting" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/firasansregular"
                            android:text="@string/about"
                            android:textColor="@color/blackPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/firasanslight"
                            android:text="@string/appversion"
                            android:textColor="@color/greyPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/llsetting">
        </View>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>